--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,110 @@ body {
   margin: 0;
   min-height: 100%;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+.tileContainer {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.tile {
+  width: 23.75%;
+  border: 1px solid black;
+  border-radius: 3px;
+  margin-left: 1%;
+  margin-bottom: 1%;
+  padding: 5px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.tile:nth-child(4n) {
+  margin-right: 1%;
+}
+
+.imgCont {
+  display: flex;
+  justify-content: center;
+  width: 20%;
+  /* border: 1px solid blue; */
+}
+
+.coinNameCont {
+  width: 80%;
+  /* border: 1px solid teal; */
+}
+.coinName {
+  font-size: 2rem;
+  margin-left: 5px;
+}
+
+.priceCont {
+  font-size: 1.5rem;
+  width: 100%;
+  display: flex;
+  margin-top: 3px;
+}
+
+.priceLabel {
+  width: 20%;
+  /* border: 1px solid teal; */
+}
+
+.price {
+  width: 80%;
+  /* border: 1px solid blue; */
+  padding-left: 3px;
+}
+.label {
+  text-align: right;
+  padding-right: 2px;
+}
+
+.marketCapCont {
+  font-size: 1rem;
+  width: 100%;
+  display: flex;
+  margin-top: 3px;
+}
+
+.marketCapLabel {
+  width: 20%;
+}
+
+.marketCap {
+  width: 80%;
+  padding-left: 3px;
+}
+
+.market {
+  display: flex;
+  width: 100%;
+  margin-top: 3px;
+}
+
+.marketLabel {
+  width: 20%;
+  text-align: right;
+}
+
+.marketCont {
+  display: flex;
+  justify-content: space-around;
+  width: 80%;
+}
+
+.fa-long-arrow-alt-down {
+  color: red;
+}
+
+.fa-long-arrow-alt-up {
+  color: green;
+}
+
+.pcChangeLabel {
+  margin-right: 1px;
+}
